force-app/main/default/objects/MSL_Batch_Summary__c/MSL_Batch_Summary__c.object-meta.xml
<CustomObject>
    <label>MSL Batch Summary</label>
    <nameField>
        <displayFormat>MSL SUM-{0000}</displayFormat>
        <label>MSL Batch Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MSL Batch Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>