force-app/main/default/objects/MSL_Batch_Summary__c/fields/Batch_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Batch_End_Date__c</fullName>
    <label>Batch End Date</label>
    <type>Date</type>
</CustomField>