force-app/main/default/objects/MSL_Batch_Summary__c/fields/Batch_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Batch_Start_Date__c</fullName>
    <label>Batch Start Date</label>
    <type>Date</type>
</CustomField>