force-app/main/default/objects/MSL_Batch_Summary__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>MSL Batch Summary</relationshipLabel>
    <relationshipName>MSL_Batch_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>