force-app/main/default/objects/MSL_Batch_Summary__c/fields/PO_Status__c.field-meta.xml
<CustomField>
    <fullName>PO_Status__c</fullName>
    <label>PO Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>