force-app/main/default/objects/MSL_Batch_Summary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Dealer__c</columns>
    <columns>PO_Status__c</columns>
    <columns>Batch_Start_Date__c</columns>
    <columns>Batch_Run_Date__c</columns>
    <columns>Batch_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>